--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="bg-gray-50 min-h-screen">
+	<body data-sveltekit-preload-data="hover" class="bg-[#fdf7f2] min-h-screen">
 		<div>%sveltekit.body%</div>
 	</body>
 </html>
